# CHANGES TO v0.4.7 #

 * Removed support for import of SPSS Portable (.por) files, given deprecation from haven. (#100)

# CHANGES TO v0.4.5 #

 * Fixed other tests to remove (unimportant) warnings.
 * Fixed a failing test of file compression that was found in v0.4.3 on some platforms.

# CHANGES TO v0.4.3 #

 * Improved, generalized, tested, and expanded documentation of `which` argument in `import()`.
 * Expanded test suite and made some small fixes.

# CHANGES TO v0.4.2 #

 * Added support to import and export to `feather` data serialization format. (#88, h/t Jason Becker)

# CHANGES TO v0.4.1 #

 * Fixed behavior of `gather_attrs()` on a data.frame with no attributes to gather. (#94)
 * Removed unrecognized file format error for import from compressed files. (#93)

# CHANGES TO v0.4.0 #

 * CRAN Release.

# CHANGES TO v0.3.19 #

 * Added a `gather_attrs()` function that moves variable-level attributes to the data.frame level. (#80)
 * Added preliminary support for import from HTML tables (#86)

# CHANGES TO v0.3.18 #

 * Added support for export to HTML tables. (#86)

# CHANGES TO v0.3.17 #

 * Fixed a bug in import from remote URLs with incorrect file extensions.

# CHANGES TO v0.3.16 #

 * Added support for import from fixed-width format files via `readr::read_fwf()` with a specified `widths` argument. This may enable faster import of these types of files and provides a base-like interface for working with readr. (#48)

# CHANGES TO v0.3.15 #

 * Added support for import from and export to yaml. (#83)
 * Fixed a bug when reading from an uncommented CSVY yaml header that contained single-line comments. (#84, h/t Tom Aldenberg)

# CHANGES TO v0.3.14 #

 * Diagnostic messages were cleaned up to facilitate translation. (#57)

# CHANGES TO v0.3.12 #
